# algae

./: .buildinfo  .gitignore  Cargo.toml  LICENSE  README.md  algae.py  game.html  genindex.html  index.html  install-codex.sh  objects.inv  playground.html  search.html  searchindex.js  spec.html  tutorial.html
.claude-plugin/: plugin.json
.doctrees/: environment.pickle  game.doctree  index.doctree  playground.doctree  spec.doctree  tutorial.doctree
.doctrees/tutorial/: auxiliary-lemmas.doctree  backward-reasoning.doctree  editor.doctree  errors.doctree  first-proofs.doctree  holes.doctree  index.doctree  induction.doctree  inference-rules.doctree  intro.doctree  proof-techniques.doctree  proofs.doctree  rewrite.doctree  (+6 more)
_sources/: game.md.txt  index.md.txt  spec.md.txt  tutorial.md.txt
_static/: algae-editor.js  algae-init.js  algae_wasm.js  algae_wasm_bg.wasm
algae/: __init__.py  ast.py  cli.py  combinators.py  format.py  parser.py  project.py  types.py
algae-cli/: Cargo.toml
algae-cli/src/: lib.rs  main.rs
algae-cli/src/cli/: mod.rs
algae-cli/src/project/: mod.rs
algae-cli/tests/: verify.rs
algae-kernel/: Cargo.toml
algae-wasm/: Cargo.toml
algae-wasm/src/: lib.rs
docs/: .gitignore  build.sh  conf.py  index.md  playground.md  requirements.txt
editors/: .gitignore
examples/: assert-stack.alg  functor.alg  kvstore.alg  kvstore.py  logic.alg  monad.alg  nat-with-induction.alg  non-empty-stack.alg  option.alg  pair.alg  queue.alg  rbac.alg  rbac.py  sequence.alg  stack.alg  tree.alg  wip.alg
game/: challenges.js  combat.js  dungeon.js  help.js  index.html  main.js  rng.js  rules.js  save.js  styles.css
lang-specs/: spec.md
scripts/: verify.sh
src/: bytecode.rs  fmt.rs  lib.rs  main.rs
test/: assert-stack.alg  kvstore.alg  kvstore_bad.py  nat-with-induction.alg  non-empty-stack.alg  queue.alg  rbac.alg  stack.alg  test_algae_cli.py
tests/: test_algae_cli.py  verify.rs
tutorial/: auxiliary-lemmas.html  backward-reasoning.html  editor.html  errors.html  first-proofs.html  holes.html  index.html  induction.html  inference-rules.html  intro.html  proof-techniques.html  proofs.html  propositional-logic.html  rewrite-reflexivity.html  rewrite.html  specs.html  stack.html  theories.html  worlds.html
(+383 files in other folders)
