[package]
name = "algae"
version = "0.1.0"
edition = "2021"
description = "Algae v2 — a proof and algebraic specification language toolchain"
license = "MIT"

[[bin]]
name = "algae"
path = "src/main.rs"

[lib]
name = "algae"
path = "src/lib.rs"

[dependencies]
winnow = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threadpool = "1"

[profile.release]
opt-level = 3
