[package]
name = "algae-cli"
version = "0.1.0"
edition = "2021"
description = "Algae v2 command-line interface — file reading and terminal reporting"
license = "MIT"

[[bin]]
name = "algae"
path = "src/main.rs"

[lib]
name = "algae_cli"
path = "src/lib.rs"

[dependencies]
algae-kernel = { path = "../algae-kernel" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
