[package]
name = "algae-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly wrapper around algae-kernel: parse, highlight-token, and proof-check Algae in the browser."

[lib]
crate-type = ["cdylib", "rlib"]

# Recent Rust toolchains emit a second (reference-types) table, which the
# `wasm-opt` version bundled by wasm-pack cannot parse ("Only 1 table definition
# allowed in MVP"). Skip wasm-opt so the build is robust across toolchains; the
# only cost is a slightly larger `.wasm`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
algae-kernel = { path = "../algae-kernel" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
serde_json = "1"
